sumo/tests/sumo/errors/person/testsuite.sumo
# rides must start where the last step of the plan ended
unconnected_ride

# rides must start where the last step of the plan ended
# 
unconnected_walk

# stops must lie on the edge on which the previous step of the plan ended
unconnected_stop

# warn when trying to define a vehicle with vClass=pedestrian
vehicle_as_person
